<resources>
    <string name="app_name" translatable="false">Toast</string>
    <string name="action_settings">Settings</string>
    <string name="about_app">About app</string>
    <string name="about">About %s</string>
    <string name="events_title">Events</string>
    <string name="speakers_title">Speakers</string>
    <string name="contact_title">Contact</string>
    <string name="created_with">Created with</string>
    <string name="toast_facebook_fanpage">Toast\'s Facebook fanpage</string>
    <string name="by_toast_team">by TOAST Team</string>
    <string name="for_more_information_visit_our">For more information visit our</string>
    <string name="error_internet_browser_not_found">Internet browser not found</string>
    <string name="toast_fanpage_url" translatable="false">https://www.facebook.com/toastwroclaw/</string>
    <string name="application_version">Application Version: %s</string>
    <string name="attend">Attend</string>
    <string name="previous_events_label">Previous events</string>
    <string name="previous_event_cover_desc">Previous event cover</string>
    <string name="previous_event_arrow_desc">Go to previous event details</string>
    <string name="no_events_loaded">No events loaded</string>
    <string name="retry">Retry</string>
    <string name="android_developers_meet_up" translatable="false">Android Developers Meetup</string>
    <string name="oops_no_internet_connection">Oops! No internet connection</string>
    <string name="please_check_your_internet_settings">Please check your internet settings</string>
    <string name="sort">Sort</string>
    <string name="alphabetical">Alphabetical</string>
    <string name="date">Date</string>
    <string name="toast_title">TOAST</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="no_speakers_found">No speakers found</string>
    <string name="read_less">Read less</string>
    <string name="read_more">Read more</string>
    <string name="your_name">Your name</string>
    <string name="email_address">Email address</string>
    <string name="your_message">Your message</string>
    <string name="send">Send</string>
    <string name="i_want_to">I want to…</string>
    <string name="speak_on_the_next_event">speak on the next event</string>
    <string name="claim_a_reward">claim a reward</string>
    <string name="become_a_partner">become a partner</string>
    <string name="min_message_length_error">Message must have at least 40 characters</string>
    <string name="max_message_length_error">Message is too long</string>
    <string name="empty_name_error">Name is empty</string>
    <string name="empty_email_error">Email is empty</string>
    <string name="empty_message_error">Message is empty</string>
    <string name="invalid_name">Invalid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="message_sent">Message successfully sent!</string>
    <string name="message_sent_desc">Message successfully sent icon</string>
    <string name="see_photos">See photos</string>
    <string name="photos_title">Photos</string>
    <string name="meetup_photo_desc">Meetup photo</string>
    <string name="no_map_app_found">No map app found</string>
    <string name="email_is_copied_to_clipboard">Email is copied to clipboard</string>
    <string name="facebook_app_id" translatable="false">146423969371902</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb146423969371902</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="participated_in">Participated in</string>
    <string name="attending">Attending</string>
    <string name="interested_in">Interested in</string>
    <string name="attended">Attended</string>
    <string name="facebook_update_attend_error">Cannot update event attend state</string>
    <string name="logged_in_successfully">You\'ve been successfully logged in</string>
    <string name="logged_out_successfully">You\'ve been successfully logged out</string>
    <string name="cannot_refresh_data">Cannot refresh data</string>
    <string name="new_config_arrived">New configuration arrived</string>
    <string name="ok">OK</string>
    <string name="restart_app">The app will restart now to apply it</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="default_notification_channel_name">Default</string>
    <string name="new_event_title">New event</string>
    <string name="new_event_description" formatted="true">Information about %1$s is now available</string>
    <string name="new_talk_title" formatted="true">New talk at %s</string>
    <string name="new_talk_description">%1$s will talk about %2$s</string>
    <string name="new_photos_title">New photos</string>
    <string name="new_photos_description">Photos from %1$s are available</string>
    <string name="event_reminder_description">%1$s is starting at %2$tR</string>

    <!-- Strings related to Settings -->
    <string name="settings">Settings</string>
    <string name="pref_notifications">Notifications</string>

    <string name="pref_title_new_events">New events</string>
    <string name="pref_title_new_photos">New photos</string>
    <string name="pref_title_new_talks">New talks</string>
    <string name="pref_title_event_reminder">Event reminder</string>
    <string name="pref_summary_new_events">Notify me about new events</string>
    <string name="pref_summary_new_photos">Notify me about new photos</string>
    <string name="pref_summary_new_talks">Notify me about new talks</string>
    <string name="pref_key_new_events_notifications" translatable="false">new_events_notifications</string>
    <string name="pref_key_new_photos_notifications" translatable="false">new_photos_notifications</string>
    <string name="pref_key_new_talks_notifications" translatable="false">new_talks_notifications</string>
    <string name="pref_key_event_reminder_notifications" translatable="false">event_reminder_notifications</string>
    <string name="pref_event_reminder_hour">1 hour before event</string>
    <string name="pref_event_reminder_two_hours">2 hours before event</string>
    <string name="pref_event_reminder_day">1 day before event</string>
    <string name="pref_summary_event_reminder">Notify me %1$s</string>
    <string name="reminder_schedule_error">Cannot schedule a reminder</string>
</resources>
