<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_background_round_rectangle"
    tools:context="pl.droidsonrioids.toast.InfoDialogFragment">

    <ImageButton
        android:id="@+id/closeImageButton"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/toastLogoImage"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_logo_toast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closeImageButton"/>

    <ImageView
        android:id="@+id/hearthImageView"
        android:layout_width="31dp"
        android:layout_height="32dp"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_favorite"
        app:layout_constraintEnd_toStartOf="@+id/byToastTeamText"
        app:layout_constraintStart_toEndOf="@+id/createdWithText"
        app:layout_constraintTop_toBottomOf="@+id/toastLogoImage"/>

    <TextView
        android:id="@+id/createdWithText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="44dp"
        android:text="@string/created_with"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/hearthImageView"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toastLogoImage"
        app:layout_constraintVertical_chainStyle="packed"/>

    <TextView
        android:id="@+id/byToastTeamText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="44dp"
        android:text="@string/by_toast_team"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/hearthImageView"
        app:layout_constraintTop_toBottomOf="@+id/toastLogoImage"/>

    <TextView
        android:id="@+id/moreInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="28dp"
        android:text="@string/for_more_information_visit_our"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/fanpageLinkText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hearthImageView"
        app:layout_constraintVertical_chainStyle="spread"/>

    <TextView
        android:id="@+id/fanpageLinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/toast_facebook_fanpage"
        android:textColor="@color/blueLink"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/appVersionTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moreInfoText"/>

    <TextView
        android:id="@+id/appVersionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/application_version_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/appVersionText"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fanpageLinkText"/>

    <TextView
        android:id="@+id/appVersionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/appVersionTitle"
        app:layout_constraintTop_toBottomOf="@+id/fanpageLinkText"/>
</android.support.constraint.ConstraintLayout>
